media-server/readarr-audio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr-audio
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: readarr-audio
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: readarr-audio
    spec:
      containers:
        - name: readarr-audio
          image: lscr.io/linuxserver/readarr:0.3.13-nightly
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config-pv
              mountPath: /config
            - name: data-pv
              mountPath: /data
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: readarr-audio-config
        - name: data-pv
          persistentVolumeClaim:
            claimName: media-pvc-2
        - name: configmap-volume
          configMap:
            name: readarr-audio-config
