media-server/readarr-audio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr-audio
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: readarr-audio
